Fix team members layout on small screens

--- a/public/index.css
+++ b/public/index.css
@@ -376,6 +376,10 @@ section:nth-child(odd) {
   margin-top: 3vh;
 }
 
+.team:not(.active) {
+  display: none;
+}
+
 .hidden {
   display: none;
 }
